objects/Prefix_History__c.object
<CustomObject>
    <fields>
        <fullName>AccountName__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Account Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account Name</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Prefix History</relationshipLabel>
        <relationshipName>Prefix_History</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Alpha_Prefix_Request__c</fullName>
        <label>Alphanumeric Prefix Request</label>
        <referenceTo>Alpha_Prefix_Request__c</referenceTo>
        <relationshipLabel>Prefix History</relationshipLabel>
        <relationshipName>Prefix_History</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>CancelDate__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Cancel Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ControlPlan__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Control Plan</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EffectiveDate__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ExistingPrefix__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Existing Prefix</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RunOutEndDate__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Run-out End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SFDCLegacyID__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>SFDCLegacyID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <label>Prefix History</label>
    <nameField>
        <label>Prefix History Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Prefix History</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>